[*] warp logs
